# docker-tutorial

./: Makefile
backend/: pyproject.toml
lesson1/: Dockerfile  Justfile  Makefile  pyproject.toml
lesson1/backend/: app.py
