[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jeffery Wang <jeffery.wang@mobagel.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.18.3"
fastapi = "^0.80.0"
beanie = "^1.11.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
